--- a/app/views/students/index.html.slim
+++ b/app/views/students/index.html.slim
@@ -1,12 +1,6 @@
-- @students.each do |student|
-  p
-    |  学生氏名
-    = student.name
-  p
-    |  所持資格
-    = p "#{student.license}アマ"
-
+h1 vacance
 a href = "/students/new" 学生追加
+br
 a href = "/places/new" 場所追加
 br
 
