--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         </div>
           <div class="nav navbar-nav">
             <li><%= link_to '場所追加', '/places/new' %></li>
-            <li><%= link_to '学生追加', '/studens/new' %></li>
+            <li><%= link_to '学生追加', '/students/new' %></li>
           </div>
       </div>
     </nav>
