--- a/app/views/students/index.html.slim
+++ b/app/views/students/index.html.slim
@@ -1,23 +1,23 @@
 
 = form_tag(action="/students#update", :method => :PACTH)
   = select_tag :student_id, options_for_select(@students_map),multiple: true, class: "searchable"
-  = select_tag :place_id, options_for_select(@places_map),multiple: true, class: "searchable"
+  = select_tag :place_id, options_for_select(@places_map), class: "searchable"
   = submit_tag "移動"
-
-table border = "1"
-  thead
-    tr
-      th Place
-      th Students
-
-  tbody
-    - @place_hash.each do |place_id,place|
+div class="container"
+  table border = "1",　class="table table-striped"
+    thead
       tr
-        td = place[0].name
-        td
-          |
-          - @student_hash["#{place_id}"].each do |student|
-            = p student.name
+        th Place
+        th Students
+
+    tbody
+      - @place_hash.each do |place_id,place|
+        tr
+          td = place[0].name
+          td
+           |
+           - @student_hash["#{place_id}"].each do |student|
+             = p student.name
 
 
 br
