tableレイアウト調整

--- a/app/views/students/index.html.slim
+++ b/app/views/students/index.html.slim
@@ -17,7 +17,7 @@ div class="container"
           td
            |
            - @student_hash["#{place_id}"].each do |student|
-             = p student.name
+             = p student.name+","
 
 
 br
