--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,12 @@
     <nav class="navbar navbar-default navbar-inverse">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand">Vacance</a>
+          <a href = "/students" class="navbar-brand">Vacance</a>
         </div>
           <div class="nav navbar-nav">
             <li><%= link_to '場所追加', '/places/new' %></li>
             <li><%= link_to '学生追加', '/students/new' %></li>
+            <li><%= link_to 'バンド追加', '/bands/new' %></li>
           </div>
       </div>
     </nav>
