--- a/app/views/students/index.html.slim
+++ b/app/views/students/index.html.slim
@@ -4,7 +4,7 @@
   = select_tag :place_id, options_for_select(@places_map), class: "searchable"
   = submit_tag "移動"
 div class="container"
-  table border = "1",　class="table table-striped"
+  table.table border = "1",　class="table table-striped"
     thead
       tr
         th Place
@@ -25,7 +25,7 @@ div class="container"
   = select_tag :band_id, options_for_select(@bands_map), class: "searchable"
   = submit_tag "移動"
 div class="container"
-  table border = "1",　class="table table-striped"
+  table.table border = "1",　class="table table-striped"
     thead
       tr
         th Bands
