--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,9 @@
           <a href = "/students" class="navbar-brand">Vacance</a>
         </div>
           <div class="nav navbar-nav">
-            <li><%= link_to '場所追加', '/places/new' %></li>
-            <li><%= link_to '学生追加', '/students/new' %></li>
-            <li><%= link_to 'バンド追加', '/bands/new' %></li>
+            <li><%= link_to '場所一覧', '/places#index' %></li>
+            <li><%= link_to '学生一覧', '/students#index' %></li>
+            <li><%= link_to 'バンド一覧', '/bands#index' %></li>
           </div>
       </div>
     </nav>
