--- a/app/views/places/index.html.slim
+++ b/app/views/places/index.html.slim
@@ -1,1 +1,24 @@
-p places#index
+table.table
+  thead
+    tr
+      th
+        | id
+      th
+        | 場所名
+      th
+        | action
+      th
+        | action
+  tbody
+    - @places.each do |place|
+      tr
+        td
+          = place.id
+        td
+          = place.name
+        td
+          = link_to '編集', edit_place_path(place), class: 'btn btn-info'
+        td
+          = link_to '削除', place_path(place), :method => :delete, class: 'btn btn-danger'
+
+= link_to 'バンド追加', new_place_path
