--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,5 +1,5 @@
 
-= form_tag(action="/students#update", :method => :PACTH)
+= form_tag(action="/home#update", :method => :PACTH)
   = select_tag :student_id, options_for_select(@students_map),multiple: true, class: "searchable"
   = select_tag :place_id, options_for_select(@places_map), class: "searchable"
   = submit_tag "移動"
@@ -20,7 +20,7 @@ div class="container"
              = p student.name+","
 
 
-= form_tag(action="/students#update", :method => :PACTH)
+= form_tag(action="/home#update", :method => :PACTH)
   = select_tag :student_id, options_for_select(@students_map),multiple: true, class: "searchable"
   = select_tag :band_id, options_for_select(@bands_map), class: "searchable"
   = submit_tag "移動"
