--- a/app/views/students/index.html.slim
+++ b/app/views/students/index.html.slim
@@ -15,7 +15,7 @@ table.table
         td
           = student.name
         td
-          = "#{student.license}アマ"
+          = student.license
         td
           = link_to '編集', edit_student_path(student), class: 'btn btn-info'
         td
