--- a/app/views/bands/index.html.slim
+++ b/app/views/bands/index.html.slim
@@ -21,4 +21,4 @@ table.table
         td
           = link_to '削除', band_path(band), :method => :delete, class: 'btn btn-danger'
 
-= link_to 'バンド追加', new_band_path
+= link_to 'バンド追加', new_band_path, class: "btn btn-large btn-primary"
