--- a/app/views/places/index.html.slim
+++ b/app/views/places/index.html.slim
@@ -21,4 +21,4 @@ table.table
         td
           = link_to '削除', place_path(place), :method => :delete, class: 'btn btn-danger'
 
-= link_to 'バンド追加', new_place_path
+= link_to 'バンド追加', new_place_path, class: "btn btn-large btn-primary"
