--- a/app/views/students/index.html.slim
+++ b/app/views/students/index.html.slim
@@ -21,4 +21,4 @@ table.table
         td
           = link_to '削除', student_path(student), :method => :delete, class: 'btn btn-danger'
 
-= link_to '学生追加', new_student_path
+= link_to '学生追加', new_student_path, class: "btn btn-large btn-primary"
