--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-default navbar-inverse">
       <div class="container">
         <div class="navbar-header">
-          <a href = "/students" class="navbar-brand">Vacance</a>
+          <a href = "/home" class="navbar-brand">Vacance</a>
         </div>
           <div class="nav navbar-nav">
             <li><%= link_to '場所一覧', '/places#index' %></li>
