initialize EPH server for develop v2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,12 @@
     <nav class="navbar navbar-default navbar-inverse">
       <div class="container">
         <div class="navbar-header">
-          <a href = "/home/index" class="navbar-brand">Vacance</a>
+          <a href = "/vacance/home/index" class="navbar-brand">Vacance</a>
         </div>
           <div class="nav navbar-nav">
-            <li><%= link_to '場所一覧', '/places#index' %></li>
-            <li><%= link_to '学生一覧', '/students#index' %></li>
-            <li><%= link_to 'バンド一覧', '/bands#index' %></li>
+            <li><%= link_to '場所一覧', '/vacance/places#index' %></li>
+            <li><%= link_to '学生一覧', '/vacance/students#index' %></li>
+            <li><%= link_to 'バンド一覧', '/vacance/bands#index' %></li>
           </div>
       </div>
     </nav>
